--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   app:
     build: .
     container_name: go
+    ports:
+      - 3000:8080
     tty: true
     volumes:
       - ./app:/go/src/app
