--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,9 @@ env:
   SLACK_WEBHOOK: https://hooks.slack.com/services/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
 
 jobs:
-  # 共通処理
   setup:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: set up
         uses: actions/setup-go@v2
@@ -18,16 +18,6 @@ jobs:
       - name: check out
         uses: actions/checkout@v2
 
-      # # 処理を高速化するために環境をキャッシュ
-      # - name: Cache
-      #   uses: actions/cache@v2.1.0
-      #   with:
-      #     path: ~/go/pkg/mod
-      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-go-
-
-  # buildテスト
   build:
     needs: setup
     runs-on: ubuntu-latest
@@ -36,7 +26,6 @@ jobs:
       - name: build
         run: go build ./...
 
-  # testを通す
   test:
     needs: setup
     runs-on: ubuntu-latest
@@ -44,19 +33,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: test
         run: go test ./... -v
-
-  # # lintを通す
-  # lint:
-  #   needs: setup
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: golangci-lint
-  #       uses: golangci/golangci-lint-action@v2
-  #       with:
-  #         version: v1.29
-
-    # TODO add tests for backend and rest-api
 
   - name: Success
     uses: rtCamp/action-slack-notify@v2.0.2
