--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: build
-        run: go build .
+        run: go build ./app/main.go
 
   # testを通す
   test:
