--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
+      - name: Install dependencies
+        run: |
+          go get ./app
+          go get example.com/octo-examplemodule
+          go get example.com/octo-examplemodule@v1.3.4
 
       # 処理を高速化するために環境をキャッシュ
       - name: Cache
@@ -23,14 +28,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-  # # buildテスト
-  # build:
-  #   needs: setup
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: build
-  #       run: go build ./app/main.go
+  # buildテスト
+  build:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: build
+        run: go build ./app/main.go
 
   # testを通す
   test:
