--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,8 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
-      - name: Install dependencies
-        run: |
-            cd ./app
-            go mod tidy
+      - name: Get dependencies
+        run: go get -v -t -d ./app/...
 
       # 処理を高速化するために環境をキャッシュ
       - name: Cache
