--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
       #     go get example.com/octo-examplemodule
       #     go get example.com/octo-examplemodule@v1.3.4
 
-      - name: Build
-        run: go build -v ./...
+      # - name: Build
+      #   run: go build -v ./...
 
       - name: Test
         run: go test -v ./...
