--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,14 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.19.1'
-      # - name: Install dependencies
-      #   run: |
-      #     cd ./app
-      #     go get .
-      #     go get example.com/octo-examplemodule
-      #     go get example.com/octo-examplemodule@v1.3.4
+      - name: Install dependencies
+        run: |
+          cd ./app
+          go get .
+          go get example.com/octo-examplemodule
 
-      # - name: Build
-      #   run: go build -v ./...
+      - name: Build
+        run: go build -v ./app/...
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v ./app/...
