--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           go-version: '1.19.1'
 
       - name: Build
-        run: go build -v ./...
+        run: cd app && go build -v ./...
 
       - name: Test
-        run: go test -v ./...
+        run: cd app && go test -v ./...
