--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: Go package
 
 on: [push]
 
+env:
+  SLACK_WEBHOOK: https://hooks.slack.com/services/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
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v3
@@ -18,3 +22,29 @@ jobs:
 
       - name: Test
         run: cd app && go test -v ./...
+
+    # TODO add tests for backend and rest-api
+
+    - name: Success
+      uses: rtCamp/action-slack-notify@v2.0.2
+      if: success()
+      env:
+        SLACK_TITLE: CI flow / Success
+        SLACK_COLOR: good
+        SLACK_MESSAGE: Message for Success
+
+    - name: Failure
+      uses: rtCamp/action-slack-notify@v2.0.2
+      if: failure()
+      env:
+        SLACK_TITLE: CI flow / Failure
+        SLACK_COLOR: danger
+        SLACK_MESSAGE: Message for Failure
+
+    - name: Cancel
+      uses: rtCamp/action-slack-notify@v2.0.2
+      if: cancelled()
+      env:
+        SLACK_TITLE: CI flow / Cancel
+        SLACK_COLOR: danger
+        SLACK_MESSAGE: Message for Cancel
