--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Go package
 on: [push]
 
 env:
-  SLACK_WEBHOOK: https://hooks.slack.com/services/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
+  SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
 
 jobs:
   ci:
@@ -25,25 +25,22 @@ jobs:
 
       # TODO add tests for backend and rest-api
       - name: Success
-        uses: rtCamp/action-slack-notify@v2.0.2
-        if: success()
+        uses: rtCamp/action-slack-notify@v2
+        if: ${{ success() }}
         env:
           SLACK_TITLE: CI flow / Success
           SLACK_COLOR: good
-          SLACK_MESSAGE: Message for Success
 
       - name: Failure
-        uses: rtCamp/action-slack-notify@v2.0.2
-        if: failure()
+        uses: rtCamp/action-slack-notify@v2
+        if: ${{ failure() }}
         env:
           SLACK_TITLE: CI flow / Failure
           SLACK_COLOR: danger
-          SLACK_MESSAGE: Message for Failure
 
       - name: Cancel
-        uses: rtCamp/action-slack-notify@v2.0.2
-        if: cancelled()
+        uses: rtCamp/action-slack-notify@v2
+        if: ${{ cancelled() }}
         env:
           SLACK_TITLE: CI flow / Cancel
           SLACK_COLOR: danger
-          SLACK_MESSAGE: Message for Cancel
