--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,6 +20,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     environment: production
+    timeout-minutes: 30
 
     steps:
     - name: Checkout
