--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,8 +1,10 @@
 name: Deploy to Amazon ECS
 
 on:
-  push:
-    branches: [ "main" ]
+  pull_request:
+    branches:
+      - main
+    types: [closed]
 
 env:
   AWS_REGION: ap-northeast-1
