--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: '1.19.1'
 
       - name: Build
-        run: cd app && go build -v ./...
+        run: go build -v ./...
 
       - name: Test
-        run: cd app && go test -v ./...
+        run: go test -v ./...
